# CoachNTT.ai

./: .claude  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DOCUMENTATION_GUIDE.md  Implementation_Cadence.md  LICENSE  Makefile  NEXT_SESSION.md  PROJECT_STRUCTURE_GUIDE.md  PROJECT_STRUCTURE_STATUS.md  README.md  SESSION_0.3_SUMMARY.md  SESSION_LOG.md  coachntt.py  conftest.py  docker-compose.minimal.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  verify_setup.py
.claude/: CLAUDE.md  CURRENT_SESSION.CoachNTT  DEPLOYMENT_STRATEGY.md  NEXT_SESSION.md  NEXT_STEPS.CoachNTT  PROJECT_CONTEXT.CoachNTT  SESSION_ANALYSIS.md  SESSION_PATTERNS.md  commit_message_2.2.5.md
cli/: __init__.py  core.py  utils.py
docs/: REALITY_CHECK.md  TESTING_STRATEGY.md
migrations/: 000_safety_foundation.sql  001_safety_enforcement.sql  002_safety_first_schema.sql  003_safety_validation_triggers.sql  004_enhanced_abstraction_schema.sql  005_cognitive_memory_enhancements.sql  006_advanced_validation_functions.sql  007_safety_scoring_system.sql  008_quality_assurance.sql  009_performance_indexes.sql  010_auto_detection_system.sql  010_fix_missing_dependencies.sql
project-docs/: Implementation_Cadence.md  PHASE2_CONTEXT.md  Phase2_Implementation_Cadence.md  Program_Requirements.md  Recovery_Implementation_Cadence.md  Session_2.2.5_Living_Documents_Integration.md  VSCode_Extension_PRD.md
scripts/: start-dev.sh  stop-dev.sh
templates/: session-analysis-template.md
vscode-extension/: .eslintrc.json  .vscodeignore  README.md  (+6 more)
(+268 files in other folders)
